Created class variables for force transformation. Commented unused code.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -4,7 +4,7 @@ baud               : 2000000
 
 useCurrentCartPose : false
 useNullspacePose   : true
-forceTorqueOn      : false
+forceTorqueOn      : true
 useFlexiForce      : false
 accelerometerOn    : false
 
