RT is running too slow. Added variable for turning off realtime publishers.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -4,11 +4,12 @@ baud               : 2000000
 
 useCurrentCartPose : false
 useNullspacePose   : true
-forceTorqueOn      : true
+forceTorqueOn      : false
 useFlexiForce      : false
 accelerometerOn    : false
 
 executeCircleTraj  : true
+publishRTtopics    : false
 
 # Specifically for MRAC
 useSimHuman        : true
