--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -3,7 +3,7 @@ port               : /dev/ttyACM0
 baud               : 2000000
 
 useCurrentCartPose : false
-useNullspacePose   : true
+useNullspacePose   : false
 forceTorqueOn      : false
 useFlexiForce      : false
 accelerometerOn    : false
@@ -229,6 +229,11 @@ ft_frame_id: l_force_torque_link #l_gripper_tool_frame
 
 pr2_cartneuroController:
   type: ice_robot_controllers/PR2CartneuroControllerClass
+  root_name: torso_lift_link
+  tip_name: l_gripper_tool_frame
+
+pr2_adaptNeuroController:
+  type: ice_robot_controllers/PR2adaptNeuroControllerClass
   root_name: torso_lift_link
   tip_name: l_gripper_tool_frame
 
