Added parameter for numer of circle trajectories.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -9,6 +9,7 @@ useFlexiForce      : false
 accelerometerOn    : false
 
 executeCircleTraj  : false
+numCircleTraj      : 3
 publishRTtopics    : false
 
 # Specifically for MRAC
