--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -123,12 +123,12 @@ task_mB               : 6.0
 simHuman_a            : 0.1
 simHuman_b            : 2.6
 
-cartIniX              :  0.7
-cartIniY              :  0.15
-cartIniZ              : -0.1
-cartIniRoll           :  0.0
-cartIniPitch          :  0.0
-cartIniYaw            :  0.0
+#cartIniX              :  0.7
+#cartIniY              :  0.15
+#cartIniZ              : -0.1
+#cartIniRoll           :  0.0
+#cartIniPitch          :  0.0
+#cartIniYaw            :  0.0
 
 cartDesX              :  0.7
 cartDesY              :  0.3
@@ -161,9 +161,9 @@ cartDes3Yaw           :  0.0
 lCartIniX             :  0.6
 lCartIniY             : -0.3
 lCartIniZ             :  0.0
-lCartIniRoll          :  1.57079633
+lCartIniRoll          :  0.0
 lCartIniPitch         :  0.0
-lCartIniYaw           :  1.57079633
+lCartIniYaw           :  0.0
 
 circleRate            : 0.5
 circleLlim            : 0.5
