--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -179,11 +179,11 @@ nnNum_Joints          : 7
 # r = (qd_m - qd) + lambda*(q_m - q);
 # Kv*r
 
-nn_Kv                 : 5
-nn_lambda             : 20
+nn_Kv                 : 5 # not being used?
+nn_lambda             : 20 # not being used?
 nn_kappa              : 0.3
-nn_Kz                 : 0.001 
-nn_Zb                 : 100 
+nn_Kz                 : 0.001 # not being used?
+nn_Zb                 : 100 # not being used?
 nn_feedForwardForce   : 1
 nn_nnF                : 100 
 nn_nnG                : 200
@@ -202,13 +202,13 @@ nn_ON                 : 1
 cartPos_Kp_x          : 60.0
 cartPos_Kp_y          : 60.0
 cartPos_Kp_z          : 60.0
+cartRot_Kp_x          : 9
+cartRot_Kp_y          : 9
+cartRot_Kp_z          : 9
+
 cartPos_Kd_x          : 10
 cartPos_Kd_y          : 10
 cartPos_Kd_z          : 10
-
-cartRot_Kp_x          : 9.0
-cartRot_Kp_y          : 9.0
-cartRot_Kp_z          : 9.0
 cartRot_Kd_x          : 3
 cartRot_Kd_y          : 3
 cartRot_Kd_z          : 3
