--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -4,7 +4,7 @@ baud               : 2000000
 
 useCurrentCartPose : false
 useNullspacePose   : true
-forceTorqueOn      : false
+forceTorqueOn      : true
 useFlexiForce      : false
 accelerometerOn    : false
 
@@ -15,7 +15,7 @@ mannequinMode      : true
 mannequinThresPos  : 0.05
 mannequinThresRot  : 0.05 # not used
 
-publishRTtopics    : false
+publishRTtopics    : true
 
 # Specifically for MRAC
 useSimHuman        : true
