--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -37,7 +37,7 @@ outerLoop_time     : 0.001
 externalRefTraj    : false
 
 # Human intent estimation
-useHumanIntent     : true
+useHumanIntent     : false
 intentEst_time     : 0.05
 intentEst_delT     : 0.1  # Propagation time
 intentEst_M        : 1.0  # M_i the mass of the intent admittance model
