--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -4,9 +4,9 @@ baud               : 2000000
 
 useCurrentCartPose : false
 useNullspacePose   : true
-forceTorqueOn      : false
+forceTorqueOn      : true
 useFlexiForce      : false
-accelerometerOn    : false
+accelerometerOn    : true
 
 executeCircleTraj  : false
 numCircleTraj      : 3
@@ -190,7 +190,7 @@ nn_lambda             : 20 # not being used?
 nn_kappa              : 0.3
 nn_Kz                 : 0.001 # not being used?
 nn_Zb                 : 100 # not being used?
-nn_feedForwardForce   : 0
+nn_feedForwardForce   : 0.1 # small because of jitter from FT measurments
 nn_nnF                : 100 
 nn_nnG                : 200
 nn_ON                 : 1
