--- a/ice_robot_controllers/CMakeLists.txt
+++ b/ice_robot_controllers/CMakeLists.txt
@@ -57,6 +57,9 @@ add_library(oelLIB
   src/least_squares.cpp
   src/kalman_estimate.cpp
 )
+add_library(digitalFilterLIB
+  src/digitalFilter.cpp
+)
 add_library(ice_robot_controllers
   src/cartneuroController.cpp
   src/adaptNeuroController.cpp
@@ -65,7 +68,7 @@ add_library(ice_robot_controllers
 #add_library(outer_loop src/outer_loop.cpp)
 #target_link_libraries(outer_loop ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
-target_link_libraries(ice_robot_controllers oelLIB ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(ice_robot_controllers oelLIB digitalFilterLIB ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 add_dependencies(ice_robot_controllers ice_msgs_generate_messages_cpp)
 add_dependencies(ice_robot_controllers pr2_gripper_sensor_msgs_generate_messages_cpp)
 
