--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -7,7 +7,7 @@ useNullspacePose   : true
 useFlexiForce      : false
 forceTorqueOn      : true
 accelerometerOn    : true
-useDigitalFilter   : false
+useDigitalFilter   : true
 
 executeCircleTraj  : false
 numCircleTraj      : 3
@@ -31,6 +31,14 @@ useMSDmodel        : false
 useDirectmodel     : false
 
 outerLoop_time     : 0.001
+
+# Digital filter coefficients
+# Lowpass, 1st order butterworth, fc=1000 hz, fs=3000Hz
+#a_filt: [1.0, 0.2679]
+#b_filt: [0.634, 0.634]
+# Lowpass, 1st order butterworth, fc=100 hz, fs=1000Hz
+a_filt: [1.0, -0.5095]
+b_filt: [0.2452, 0.2452]
 
 # Is the reference trajectory x_r or q_r set externally or estimated
 # If externalRefTraj is false the human intent x_i is used
