--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -12,11 +12,11 @@ useDigitalFilter   : true
 executeCircleTraj  : false
 numCircleTraj      : 3
 
-mannequinMode      : true
+mannequinMode      : false
 mannequinThresPos  : 0.05
 mannequinThresRot  : 0.05 # not used
 
-publishRTtopics    : true
+publishRTtopics    : false
 
 # Specifically for MRAC
 useSimHuman        : false
@@ -207,7 +207,7 @@ nn_lambda             : 20 # not being used?
 nn_kappa              : 0.3
 nn_Kz                 : 0.001 # not being used?
 nn_Zb                 : 100 # not being used?
-nn_feedForwardForce   : 0.5 # small because of jitter from FT measurments
+nn_feedForwardForce   : 0.2 # small because of jitter from FT measurments
 nn_nnF                : 100 
 nn_nnG                : 200
 nn_ON                 : 1
