Moved computations to a parallel thread. The RT loop sends motor commands every $loopRateFactor milisec.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -2,17 +2,19 @@
 port               : /dev/ttyACM0
 baud               : 2000000
 
+loopRateFactor     : 4 # Virtual loop rate [ms] (time for computations = loopRateFactor - 2)
+
 useCurrentCartPose : false
 useNullspacePose   : true
 useFlexiForce      : false
-forceTorqueOn      : true
-accelerometerOn    : true
-useDigitalFilter   : true
+forceTorqueOn      : false
+accelerometerOn    : false
+useDigitalFilter   : false
 
-executeCircleTraj  : false
+executeCircleTraj  : true
 numCircleTraj      : 3
 
-mannequinMode      : true
+mannequinMode      : false
 mannequinThresPos  : 0.05
 mannequinThresRot  : 0.05 # not used
 
