--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -2,23 +2,23 @@
 port               : /dev/ttyACM0
 baud               : 2000000
 
-loopRateFactor     : 10 # Virtual loop rate [ms] (time for computations = loopRateFactor - 2)
+loopRateFactor     : 3 # Virtual loop rate [ms] (time for computations = loopRateFactor - 2)
 
 useCurrentCartPose : false
 useNullspacePose   : true
 useFlexiForce      : false
-forceTorqueOn      : false
-accelerometerOn    : false
-useDigitalFilter   : false
+forceTorqueOn      : true
+accelerometerOn    : true
+useDigitalFilter   : true
 
-executeCircleTraj  : true
-numCircleTraj      : 3
+executeCircleTraj  : false
+numCircleTraj      : 6
 
 mannequinMode      : false
 mannequinThresPos  : 0.05
 mannequinThresRot  : 0.05 # not used
 
-publishRTtopics    : false
+publishRTtopics    : true
 
 # Specifically for MRAC
 useSimHuman        : false
@@ -196,7 +196,7 @@ circleUlim            : 0.3
 
 nnNum_Inputs          : 44 
 nnNum_Outputs         : 6  # Cartesian
-nnNum_Hidden          : 3
+nnNum_Hidden          : 12
 nnNum_Error           : 6  
 nnNum_Joints          : 7  # DOF
 
@@ -204,14 +204,14 @@ nnNum_Joints          : 7  # DOF
 # r = (qd_m - qd) + lambda*(q_m - q);
 # Kv*r
 
-nn_Kv                 : 5 # not being used?
+nn_Kv                 : 5 # not being used? see cartPos_Kd and cartPos_Kp insteads
 nn_lambda             : 20 # not being used?
-nn_kappa              : 0.3
+nn_kappa              : 0.25
 nn_Kz                 : 0.001 # not being used?
 nn_Zb                 : 100 # not being used?
-nn_feedForwardForce   : 0.2 # small because of jitter from FT measurments
-nn_nnF                : 100 
-nn_nnG                : 200
+nn_feedForwardForce   : 0.5 # small because of jitter from FT measurments
+nn_nnF                : 100 # -> W (outer)
+nn_nnG                : 200 # -> V (inner)
 nn_ON                 : 1
 
 # nn_Kv               : 5
@@ -224,12 +224,13 @@ nn_ON                 : 1
 # nn_nnG              : 100
 # nn_ON               : 1
 
+# Kd*(qd_m - qd) + Kp*(q_m - q)
 cartPos_Kp_x          : 60.0
 cartPos_Kp_y          : 60.0
 cartPos_Kp_z          : 60.0
-cartRot_Kp_x          : 9
-cartRot_Kp_y          : 9
-cartRot_Kp_z          : 9
+cartRot_Kp_x          : 10
+cartRot_Kp_y          : 10
+cartRot_Kp_z          : 10
 
 cartPos_Kd_x          : 10
 cartPos_Kd_y          : 10
