Settings for Experiment A4, 11.rtp.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -5,7 +5,7 @@ baud               : 2000000
 loopRateFactor     : 3 # Virtual loop rate [ms] (time for computations = loopRateFactor - 2)
 
 useCurrentCartPose : false
-useNullspacePose   : true
+useNullspacePose   : false
 useFlexiForce      : false
 forceTorqueOn      : true
 accelerometerOn    : true
@@ -211,11 +211,11 @@ nnNum_Joints          : 7  # DOF
 
 nn_Kv                 : 5 # not being used? see cartPos_Kd and cartPos_Kp insteads
 nn_lambda             : 20 # not being used?
-nn_kappa              : 0.25
-nn_Kz                 : 0.005 # not being used?
-nn_Zb                 : 100 # not being used?
+nn_kappa              : 0.15
+nn_Kz                 : 0.001 # not being used?
+nn_Zb                 : 1 # not being used?
 nn_feedForwardForce   : 0.0 # small because of jitter from FT measurments
-nn_nnF                : 100 # -> W (outer)
+nn_nnF                : 200 # -> W (outer)
 nn_nnG                : 200 # -> V (inner)
 nn_ON                 : 1
 
@@ -230,19 +230,20 @@ nn_ON                 : 1
 # nn_ON               : 1
 
 # Kd*(qd_m - qd) + Kp*(q_m - q)
-cartPos_Kp_x          : 60.0
-cartPos_Kp_y          : 60.0
-cartPos_Kp_z          : 60.0
+cartPos_Kp_x          : 60
+cartPos_Kp_y          : 60
+cartPos_Kp_z          : 60
 cartRot_Kp_x          : 10
 cartRot_Kp_y          : 10
 cartRot_Kp_z          : 10
 
-cartPos_Kd_x          : 10
-cartPos_Kd_y          : 10
-cartPos_Kd_z          : 10
-cartRot_Kd_x          : 3
-cartRot_Kd_y          : 3
-cartRot_Kd_z          : 3
+# Prevents motion if qd=0
+cartPos_Kd_x          : 1
+cartPos_Kd_y          : 1
+cartPos_Kd_z          : 1
+cartRot_Kd_x          : 1
+cartRot_Kd_y          : 1
+cartRot_Kd_z          : 1
 
 # Nominal angles for the arm joints
                 # Left arm          # Right arm
