Added tactile data message.

--- a/ice_msgs/CMakeLists.txt
+++ b/ice_msgs/CMakeLists.txt
@@ -19,6 +19,8 @@ add_message_files(DIRECTORY msg FILES
   combinedError.msg
   combinedTwistError.msg
   controllerState.msg
+  # sensors
+  tactileArrayData.msg
 )
 
 add_service_files(DIRECTORY srv FILES
