Added new message for Experiment B.

--- a/ice_msgs/CMakeLists.txt
+++ b/ice_msgs/CMakeLists.txt
@@ -15,6 +15,7 @@ add_message_files(DIRECTORY msg FILES
   controllerParam.msg
   twoLayerNN.msg
   experimentDataA.msg
+  experimentDataB.msg
   # pr2_cart
   combinedError.msg
   combinedTwistError.msg
