Added experiment B (tactile box with ARMA filter).

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -24,6 +24,7 @@ publishRTtopics    : true
 # Specifically for MRAC
 useSimHuman        : false
 
+useOuterloop       : true
 # Only one can be true
 useARMAmodel       : true
 useCTARMAmodel     : false
