--- a/ice_msgs/CMakeLists.txt
+++ b/ice_msgs/CMakeLists.txt
@@ -36,6 +36,7 @@ add_service_files(DIRECTORY srv FILES
   setCarteDofMatrix.srv
   setGains.srv
   setValue.srv
+  setInteger.srv
   setBool.srv
   setNNweights.srv
   getNNweights.srv
