--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -2,6 +2,7 @@
 port               : /dev/ttyACM0
 baud               : 2000000
 tactile_frame_id   : l_gripper_tool_frame
+num_tactile_sensors: 4
 
 loopRateFactor     : 3 # Virtual loop rate [ms] (time for computations = loopRateFactor - 2)
 
