Added a Cartesian vector msg.

--- a/ice_msgs/CMakeLists.txt
+++ b/ice_msgs/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_message_files(DIRECTORY msg FILES
   # ice_robot_controllers
+  CartVec.msg
   neuroControllerState.msg
   controllerFullData.msg
   controllerParam.msg
