--- a/ice_sensors/config/tactileBox.yaml
+++ b/ice_sensors/config/tactileBox.yaml
@@ -1,4 +1,11 @@
-# Flexiforce settings
+## Flexiforce box
 port               : /dev/ttyACM0
 baud               : 2000000
+num_sensors        : 4
+#tactile_frame_id   : base_link
+
+## Sensor Array + FlexiForce
+#port               : /dev/ttyUSB0
+#baud               : 115200
+#num_sensors        : 17
 tactile_frame_id   : l_gripper_tool_frame
