--- a/ice_sensors/config/tactileBox.yaml
+++ b/ice_sensors/config/tactileBox.yaml
@@ -1,11 +1,11 @@
 ## Flexiforce box
-port               : /dev/ttyACM0
+#port               : /dev/ttyACM0
 baud               : 2000000
-num_sensors        : 4
+#num_sensors        : 4
 #tactile_frame_id   : base_link
 
 ## Sensor Array + FlexiForce
-#port               : /dev/ttyUSB0
+port               : /dev/ttyUSB0
 #baud               : 115200
-#num_sensors        : 17
+num_sensors        : 17
 tactile_frame_id   : l_gripper_tool_frame
