Creating X and Y ARMA model for each sensor. Using raw tactile data and intent is still computed from FT sensor.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -9,9 +9,9 @@ loopRateFactor     : 3 # Virtual loop rate [ms] (time for computations = loopRat
 useCurrentCartPose : false
 useNullspacePose   : true
 useFlexiForce      : true
-forceTorqueOn      : false
-accelerometerOn    : false
-useDigitalFilter   : false
+forceTorqueOn      : true
+accelerometerOn    : true
+useDigitalFilter   : true
 
 executeCircleTraj  : false
 numCircleTraj      : 3
