--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -3,6 +3,10 @@ port               : /dev/ttyACM0
 baud               : 2000000
 tactile_frame_id   : l_gripper_tool_frame
 num_tactile_sensors: 4
+sensor_0 : [1,0,0]
+sensor_1 : [0,-1,0]
+sensor_2 : [-1,0,0]
+sensor_3 : [0,1,0]
 
 loopRateFactor     : 3 # Virtual loop rate [ms] (time for computations = loopRateFactor - 2)
 
@@ -59,7 +63,7 @@ b_filt: [0.0994, 0.0994]
 externalRefTraj    : false
 
 # Human intent estimation
-useHumanIntent     : true
+useHumanIntent     : false
 intentEst_time     : 0.05
 intentEst_delT     : 0.1  # Propagation time
 intentEst_M        : 10.0  # M_i the mass of the intent admittance model
