--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -7,6 +7,7 @@ sensor_0 : [-1,0,0]
 sensor_1 : [0,1,0]
 sensor_2 : [1,0,0]
 sensor_3 : [0,-1,0]
+max_calibration_distance: 0.1
 
 loopRateFactor     : 3 # Virtual loop rate [ms] (time for computations = loopRateFactor - 2)
 
