Created new tactile calibration service message. Disabled x_r generation and added TODO.

--- a/ice_msgs/CMakeLists.txt
+++ b/ice_msgs/CMakeLists.txt
@@ -42,6 +42,8 @@ add_service_files(DIRECTORY srv FILES
   setBool.srv
   setNNweights.srv
   getNNweights.srv
+  # sensors
+  tactileCalibration.srv
 )
 
 generate_messages(DEPENDENCIES
