--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -1,3 +1,8 @@
+# Data to be published
+#experiment : A
+#experiment : B
+experiment : C
+
 # Flexiforce settings
 port               : /dev/ttyACM0
 baud               : 2000000
@@ -12,8 +17,8 @@ max_calibration_distance: 0.2
 loopRateFactor     : 3 # Virtual loop rate [ms] (time for computations = loopRateFactor - 2)
 
 useCurrentCartPose : false
-useNullspacePose   : true
-useFlexiForce      : true
+useNullspacePose   : false
+useFlexiForce      : false
 forceTorqueOn      : false
 accelerometerOn    : false
 useDigitalFilter   : false
@@ -30,9 +35,9 @@ publishRTtopics    : true
 # Specifically for MRAC
 useSimHuman        : false
 
-useOuterloop       : true
+useOuterloop       : false
 # Only one can be true
-useARMAmodel       : true
+useARMAmodel       : false
 useCTARMAmodel     : false
 useFIRmodel        : false
 useMRACmodel       : false
@@ -61,7 +66,7 @@ b_filt: [0.0994, 0.0994]
 # Is the reference trajectory x_r or q_r set externally or estimated
 # If externalRefTraj is false the human intent x_i is used
 # i.e. an admittance model is used to generate x_i from f_h the force from the FT sensor
-externalRefTraj    : true
+externalRefTraj    : false
 
 # Human intent estimation
 useHumanIntent     : false
