--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -1,7 +1,5 @@
 # Data to be published
-#experiment : A
-#experiment : B
-experiment : C
+experiment         : 1 # Experiment A=0, B=1, C=2
 
 # Flexiforce settings
 port               : /dev/ttyACM0
@@ -17,8 +15,8 @@ max_calibration_distance: 0.2
 loopRateFactor     : 3 # Virtual loop rate [ms] (time for computations = loopRateFactor - 2)
 
 useCurrentCartPose : false
-useNullspacePose   : false
-useFlexiForce      : false
+useNullspacePose   : true
+useFlexiForce      : true
 forceTorqueOn      : false
 accelerometerOn    : false
 useDigitalFilter   : false
@@ -35,9 +33,9 @@ publishRTtopics    : true
 # Specifically for MRAC
 useSimHuman        : false
 
-useOuterloop       : false
+useOuterloop       : true
 # Only one can be true
-useARMAmodel       : false
+useARMAmodel       : true
 useCTARMAmodel     : false
 useFIRmodel        : false
 useMRACmodel       : false
@@ -66,7 +64,7 @@ b_filt: [0.0994, 0.0994]
 # Is the reference trajectory x_r or q_r set externally or estimated
 # If externalRefTraj is false the human intent x_i is used
 # i.e. an admittance model is used to generate x_i from f_h the force from the FT sensor
-externalRefTraj    : false
+externalRefTraj    : true
 
 # Human intent estimation
 useHumanIntent     : false
