--- a/ice_experimenter/package.xml
+++ b/ice_experimenter/package.xml
@@ -12,10 +12,12 @@
   <build_depend>ice_msgs</build_depend>
   <build_depend>rosbag</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>apc_robot</build_depend>
   
   <run_depend>cmake_modules</run_depend>
   <run_depend>ice_msgs</run_depend>
   <run_depend>rosbag</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>apc_robot</run_depend>
 
 </package>
