Added sound_play client to experimenter.

--- a/ice_experimenter/CMakeLists.txt
+++ b/ice_experimenter/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
   rosbag
   roscpp
   apc_robot
+  sound_play
 )
 
 ## System dependencies are found with CMake's conventions
@@ -28,7 +29,7 @@ find_package(Boost REQUIRED COMPONENTS thread)
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ice_experimenter
-#  CATKIN_DEPENDS cmake_modules ice_msgs rosbag roscpp apc_robot
+#  CATKIN_DEPENDS cmake_modules ice_msgs rosbag roscpp apc_robot sound_play
 #  DEPENDS system_lib
 )
 
