--- a/ice_experimenter/package.xml
+++ b/ice_experimenter/package.xml
@@ -13,11 +13,13 @@
   <build_depend>rosbag</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>apc_robot</build_depend>
-  
+  <build_depend>sound_play</build_depend>
+
   <run_depend>cmake_modules</run_depend>
   <run_depend>ice_msgs</run_depend>
   <run_depend>rosbag</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>apc_robot</run_depend>
+  <run_depend>sound_play</run_depend>
 
 </package>
