Visualization of octo sensor can.
Added variable for number of patches; updated serial output format;
commented filtering; new RVIZ publisher; commented biasing.

--- a/ice_sensors/config/tactileBox.yaml
+++ b/ice_sensors/config/tactileBox.yaml
@@ -14,4 +14,5 @@
 port               : /dev/ttyUSB0
 baud               : 115200
 num_sensors        : 16
+num_patches        : 8
 tactile_frame_id   : map
