--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -35,7 +35,7 @@ useSimHuman        : false
 
 useOuterloop       : false
 # Only one can be true
-useARMAmodel       : true
+useARMAmodel       : false
 useCTARMAmodel     : false
 useFIRmodel        : false
 useMRACmodel       : false
