--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -1,7 +1,46 @@
-# Data to be published
+#############################
+# Experiment settings       #
+#############################
 experiment         : 0 # Experiment A=0, B=1, C=2
 
-# Flexiforce settings
+#############################
+# Controller settings       #
+#############################
+
+loopRateFactor     : 3 # Virtual loop rate [ms] (time for computations = loopRateFactor - 2)
+
+useCurrentCartPose : false
+useNullspacePose   : true
+useDigitalFilter   : false
+
+publishRTtopics    : true
+
+mannequinMode      : false
+mannequinThresPos  : 0.05
+mannequinThresRot  : 0.05 # not used
+
+#############################
+# F/T sensors               #
+#############################
+
+forceTorqueOn      : false
+accelerometerOn    : false
+
+#gripper_acc_tip: r_gripper_motor_accelerometer_link
+gripper_acc_tip: l_gripper_motor_accelerometer_link
+ft_frame_id: l_force_torque_link #l_gripper_tool_frame
+
+# This makes zero any force less than below
+forceCutOffX          : 0.1
+forceCutOffY          : 0.1
+forceCutOffZ          : 0.1
+
+#############################
+# Flexiforce settings       #
+#############################
+useFlexiForce      : false
+calibrateSensors   : false
+
 port               : /dev/ttyACM0
 baud               : 2000000
 tactile_frame_id   : l_gripper_tool_frame
@@ -11,28 +50,20 @@ sensor_1 : [0,1,0]
 sensor_2 : [1,0,0]
 sensor_3 : [0,-1,0]
 max_calibration_distance: 0.2
-calibrateSensors   : false
 
-loopRateFactor     : 3 # Virtual loop rate [ms] (time for computations = loopRateFactor - 2)
-
-useCurrentCartPose : false
-useNullspacePose   : true
-useFlexiForce      : false
-forceTorqueOn      : false
-accelerometerOn    : false
-useDigitalFilter   : false
+#############################
+# Reference trajectory      #
+#############################
 
 executeCircleTraj  : false
 numCircleTraj      : 3
+circleRate         : 0.5   # angular velocity in rad/sec (v = r*w = A*w)
+circleLlim         : 0.0   # amplitude = (circleUlim - circleLlim)/2
+circleUlim         : 0.8   #  = A/2
 
-mannequinMode      : false
-mannequinThresPos  : 0.05
-mannequinThresRot  : 0.05 # not used
-
-publishRTtopics    : true
-
-# Specifically for MRAC
-useSimHuman        : false
+#############################
+# Outer loop                #
+#############################
 
 useOuterloop       : false
 # Only one can be true
@@ -75,6 +106,21 @@ useHumanIntent     : false
 intentEst_time     : 0.05
 intentEst_delT     : 0.1  # Propagation time
 intentEst_M        : 100.0  # M_i the mass of the intent admittance model
+
+# Specifically for MRAC
+useSimHuman        : false
+# Params for MRAC Sim Human
+simHuman_a            : 0.1
+simHuman_b            : 2.6
+
+# Params for the MSD outer-loop controller
+m_M                   : 1.0
+m_S                   : 0.0
+m_D                   : 5.0
+
+# Params for M(s) of the RLS models
+task_mA               : 0.7
+task_mB               : 0.7
 
 # The params of the RLS estimator
 rls_lambda         : 0.98
@@ -145,23 +191,9 @@ flex_4_filtW5         :  0.0003
 flex_4_filtW6         : -0.0001
 flex_4_filtW7         :  0.0013
 
-# This makes zero any force less than below
-forceCutOffX          : 0.1
-forceCutOffY          : 0.1
-forceCutOffZ          : 0.1
-
-# Params for the MSD outer-loop controller
-m_M                   : 1.0
-m_S                   : 0.0
-m_D                   : 5.0
-
-# Params for M(s) of the RLS models
-task_mA               : 0.7
-task_mB               : 0.7
-
-# Params for MRAC Sim Human
-simHuman_a            : 0.1
-simHuman_b            : 2.6
+#############################
+# Robot Pose                #
+#############################
 
 #cartIniX              :  0.7
 #cartIniY              :  0.15
@@ -211,9 +243,19 @@ cartIniRoll          :  1.57
 cartIniPitch         :  0.0
 cartIniYaw           :  0.0
 
-circleRate            : 0.5 # angular velocity in rad/sec (v = r*w = A*w)
-circleLlim            : 0.0 # amplitude = (circleUlim - circleLlim)/2
-circleUlim            : 0.8 #  = A/2
+# Nominal angles for the arm joints
+                # Left arm          # Right arm
+#nom_joint_0  :  0.0    # 0.067      # -0.48577  
+#nom_joint_1  :  0.0    # 0.036      # -0.0190721
+#nom_joint_2  :  1.5828 # 0.012      # -1.51115  
+#nom_joint_3  : -0.5    #-0.097      # -1.70928  
+#nom_joint_4  :  0.0    #-0.983      #  1.54561  
+#nom_joint_5  :  0.0    #-0.0947     #  0.046854 
+#nom_joint_6  :  0.0    # 0.1114     # -0.0436174
+
+#############################
+# NN controller             #
+#############################
 
 nnNum_Inputs          : 44 
 nnNum_Outputs         : 6  # Cartesian
@@ -246,9 +288,9 @@ nn_ON                 : 1
 # nn_ON               : 1
 
 # Kd*(qd_m - qd) + Kp*(q_m - q)
-cartPos_Kp_x          : 60
-cartPos_Kp_y          : 60
-cartPos_Kp_z          : 60
+cartPos_Kp_x          : 120
+cartPos_Kp_y          : 120
+cartPos_Kp_z          : 120
 cartRot_Kp_x          : 10
 cartRot_Kp_y          : 10
 cartRot_Kp_z          : 10
@@ -261,20 +303,9 @@ cartRot_Kd_x          : 3
 cartRot_Kd_y          : 3
 cartRot_Kd_z          : 3
 
-# Nominal angles for the arm joints
-                # Left arm          # Right arm
-nom_joint_0  :  0.0    # 0.067      # -0.48577  
-nom_joint_1  :  0.0    # 0.036      # -0.0190721
-nom_joint_2  :  1.5828 # 0.012      # -1.51115  
-nom_joint_3  : -0.5    #-0.097      # -1.70928  
-nom_joint_4  :  0.0    #-0.983      #  1.54561  
-nom_joint_5  :  0.0    #-0.0947     #  0.046854 
-nom_joint_6  :  0.0    # 0.1114     # -0.0436174
-
-
-#gripper_acc_tip: r_gripper_motor_accelerometer_link
-gripper_acc_tip: l_gripper_motor_accelerometer_link
-ft_frame_id: l_force_torque_link #l_gripper_tool_frame
+#############################
+# Controller plugins        #
+#############################
 
 pr2_cartneuroController:
   type: ice_robot_controllers/PR2CartneuroControllerClass
@@ -286,7 +317,9 @@ pr2_adaptNeuroController:
   root_name: torso_lift_link
   tip_name: l_gripper_tool_frame
 
-# Torque saturation
+#############################
+# Torque saturation         #
+#############################
 saturation:
   l_shoulder_pan_joint: 11.88
   l_shoulder_lift_joint: 11.64
@@ -303,7 +336,9 @@ saturation:
   r_wrist_flex_joint: 5.568
   r_wrist_roll_joint: 5.568
 
-# Posture control
+#############################
+# Posture control           #
+#############################
 k_posture: 500.0
 jacobian_inverse_damping: 0.01
 joint_feedforward:
