--- a/ice_experimenter/package.xml
+++ b/ice_experimenter/package.xml
@@ -14,6 +14,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>apc_robot</build_depend>
   <build_depend>sound_play</build_depend>
+  <build_depend>trajectory_generator</build_depend>
 
   <run_depend>cmake_modules</run_depend>
   <run_depend>ice_msgs</run_depend>
@@ -21,5 +22,6 @@
   <run_depend>roscpp</run_depend>
   <run_depend>apc_robot</run_depend>
   <run_depend>sound_play</run_depend>
-
+  <run_depend>trajectory_generator</run_depend>
+  
 </package>
