Integrated new NNController with PR2 controller.

--- a/ice_robot_controllers/CMakeLists.txt
+++ b/ice_robot_controllers/CMakeLists.txt
@@ -61,7 +61,7 @@ add_library(digitalFilterLIB
   src/digitalFilter.cpp
 )
 add_library(ice_robot_controllers
-  src/cartneuroController.cpp
+  #src/cartneuroController.cpp
   src/adaptNeuroController.cpp
 )
 
@@ -69,7 +69,7 @@ add_library(ice_robot_controllers
 #target_link_libraries(outer_loop ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
 target_link_libraries(ice_robot_controllers
-  oelLIB digitalFilterLIB
+  oelLIB digitalFilterLIB nn_controller
   ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 add_dependencies(ice_robot_controllers ice_msgs_generate_messages_cpp)
 add_dependencies(ice_robot_controllers pr2_gripper_sensor_msgs_generate_messages_cpp)
